--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.13.1",
+    "react-responsive-carousel": "^3.2.9",
     "react-scripts": "3.4.2"
   },
   "scripts": {
