--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
+    "fetch": "^1.1.0",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-table": "^4.3.1",
