--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "fetch": "^1.1.0",
+    "light-toast": "^0.3.0",
     "mdbreact": "^4.27.0",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
