--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fetch": "^1.1.0",
     "light-toast": "^0.3.0",
     "mdbreact": "^4.27.0",
+    "newsapi": "^2.4.1",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
