--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mdbreact": "^4.27.0",
     "newsapi": "^2.4.1",
     "node-fetch": "^2.6.0",
+    "proptype": "^1.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-table": "^4.3.1",
